// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LineEditableModal component LineEditableModal renders with amount and submitting 1`] = `
<div>
  <div>
    <div
      class="overlay"
    >
      <div
        class="container large"
      >
        <div
          class="header"
        >
          <div
            class="title"
          >
            TITLE
          </div>
        </div>
        <div
          class="container"
        >
          <div
            class=""
          >
            <div
              class="col"
            >
              <div
                class="row"
              >
                <div
                  class="col"
                >
                  <div
                    class="fieldGroup"
                  >
                    <label
                      class="label"
                    >
                      Amount
                    </label>
                    <input
                      autocomplete="off"
                      class="default"
                      inputmode="numeric"
                      name="amount"
                      type="text"
                      value="1"
                    />
                  </div>
                </div>
                <div
                  class="col"
                >
                  <div
                    class="fieldGroup"
                  >
                    <label
                      class="label"
                    >
                      Amount
                    </label>
                    <span
                      autocomplete="off"
                      class="default readOnly"
                    >
                      1
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="container"
        >
          <button
            class="button"
            color="secondary"
            tabindex="0"
            type="button"
          >
            <div
              class="label"
            >
              Cancel
            </div>
          </button>
          <button
            class="button"
            color="primary"
            tabindex="0"
            type="button"
          >
            <div
              class="label"
            >
              Submit
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LineEditableModal component LineEditableModal renders with amount hidden in form 1`] = `
<div>
  <div>
    <div
      class="overlay"
    >
      <div
        class="container large"
      >
        <div
          class="header"
        >
          <div
            class="title"
          >
            TITLE
          </div>
        </div>
        <div
          class="container"
        >
          <div
            class=""
          >
            <div
              class="col"
            />
          </div>
        </div>
        <div
          class="container"
        >
          <button
            class="button"
            color="secondary"
            tabindex="0"
            type="button"
          >
            <div
              class="label"
            >
              Cancel
            </div>
          </button>
          <button
            class="button"
            color="primary"
            tabindex="0"
            type="button"
          >
            <div
              class="label"
            >
              Submit
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
